[#265] fix scrolling behavior and scrollbar style
Former-commit-id: be7c78046052f707ac0630632127f1c27bc0e38e

--- a/Frontend/gis/src/app/infobox/infobox.component.less
+++ b/Frontend/gis/src/app/infobox/infobox.component.less
@@ -6,32 +6,34 @@
     overflow: hidden;
     
 
-    /* width */
-    &::-webkit-scrollbar {
-        width: 5px;
-    }
-
-    /* Track */
-    // ::-webkit-scrollbar-track {
-        // box-shadow: inset 0 0 5px grey;
-        // border-radius: 10px;
-    // }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-        background: rgba(0, 0, 0, 0.25);
-        // border-radius: 10px;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-        background: rgba(0, 0, 0, 0.3);
-    }
+    
 
     .mat-card {
         max-width: 95vw;
-        max-height: 85vh;
+        max-height: calc(~"80vh - 45px");
         overflow: auto;
+
+        /* width */
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        /* Track */
+        // ::-webkit-scrollbar-track {
+            // box-shadow: inset 0 0 5px grey;
+            // border-radius: 10px;
+        // }
+
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.25);
+            // border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+            background: rgba(0, 0, 0, 0.3);
+        }
     }
 
     .btngrp {
